k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketly
  namespace: marketly
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 5002
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 5002
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 5003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
